src/tests/testfiles/function-declarations/3.txt
testfiles/function-declarations/3.c:6:1: error: Redefinition of function 'f'
float f(int a, int b) {
^
testfiles/function-declarations/3.c:10:1: error: Redefinition of function 'f'
char f(int a, int b) {
^
